syntax = "proto3";

package foodify.user.customer;

option java_multiple_files = true;
option java_package = "foodify.user.customer";

service UserCustomerService {
  rpc GetUserByLogin(GetUserByLoginRequest) returns (UserCustomerResponse);
}

message GetUserByLoginRequest {
  string login = 1;
}

message UserCustomerResponse {
  string id = 1;
  string name = 2;
  string email = 3;
  string login = 4;
  string password = 5;
  string role = 6;
}
